# lifeaterthat

./: .env.example  .gitignore  BRIDGE_TEST2.md  CHANGELOG.md  CONTRIBUTORS.md  README.md  TODO.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: backend-tests.yml
backend/: pyproject.toml  requirements.txt
backend/afterlife_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/app/: main.py
backend/app/api/: call.py  deps.py  memories.py  upload.py
backend/app/models/: stream.py
backend/app/services/: ai_service.py  persona_service.py  safety_service.py  storage_service.py
backend/testing_utils/: audio.py  nlp.py
backend/tests/: conftest.py  test_nlp_helpers.py
backend/tests/bumpers/: test_character_integrity.py  test_cost_integrity.py  test_data_isolation.py  test_emotional_safety.py  test_safety_service_unit.py  test_stream_completeness.py  test_stream_safety.py
backend/tests/e2e/: test_sse_chat_e2e.py
backend/tests/unit/: test_routes_contract.py
docs/: PRD.md
docs/plans/: 2026-04-16-crisis-safety-classifier.md
infra/supabase/: seed.sql
src/: index.css
src/__mocks__/: framer-motion.tsx
src/components/: ChatScreen.tsx  CreateMemory.tsx  HeroScreen.tsx
src/lib/: streamClient.ts
src/pages/: Index.tsx
src/test/: setup.ts
src/test/failing/: ai-chat.test.tsx  auth.test.tsx  bugs.test.tsx  file-upload.test.tsx  memory-gallery.test.tsx  streaming.test.tsx  voice-features.test.tsx
